Acabado el punto 3

--- a/20212_M2.875_PEC2-Enunciado__.ipynb
+++ b/20212_M2.875_PEC2-Enunciado__.ipynb
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 52,
    "metadata": {
     "id": "gm3tnjBd2a9e"
    },
@@ -578,33 +578,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_9\"\n",
+      "Model: \"sequential_16\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " dense_63 (Dense)            (None, 32, 32, 128)       256       \n",
+      " dense_112 (Dense)           (50000, 32, 32, 128)      512       \n",
       "                                                                 \n",
-      " dense_64 (Dense)            (None, 32, 32, 128)       16512     \n",
+      " dense_113 (Dense)           (50000, 32, 32, 128)      16512     \n",
       "                                                                 \n",
-      " dropout_27 (Dropout)        (None, 32, 32, 128)       0         \n",
+      " dropout_48 (Dropout)        (50000, 32, 32, 128)      0         \n",
       "                                                                 \n",
-      " dense_65 (Dense)            (None, 32, 32, 128)       16512     \n",
+      " dense_114 (Dense)           (50000, 32, 32, 128)      16512     \n",
       "                                                                 \n",
-      " dense_66 (Dense)            (None, 32, 32, 128)       16512     \n",
+      " dense_115 (Dense)           (50000, 32, 32, 128)      16512     \n",
       "                                                                 \n",
-      " dropout_28 (Dropout)        (None, 32, 32, 128)       0         \n",
+      " dropout_49 (Dropout)        (50000, 32, 32, 128)      0         \n",
       "                                                                 \n",
-      " dense_67 (Dense)            (None, 32, 32, 128)       16512     \n",
+      " dense_116 (Dense)           (50000, 32, 32, 128)      16512     \n",
       "                                                                 \n",
-      " dense_68 (Dense)            (None, 32, 32, 128)       16512     \n",
+      " dense_117 (Dense)           (50000, 32, 32, 128)      16512     \n",
       "                                                                 \n",
-      " dropout_29 (Dropout)        (None, 32, 32, 128)       0         \n",
+      " dropout_50 (Dropout)        (50000, 32, 32, 128)      0         \n",
       "                                                                 \n",
-      " dense_69 (Dense)            (None, 32, 32, 10)        1290      \n",
+      " dense_118 (Dense)           (50000, 32, 32, 1)        129       \n",
       "                                                                 \n",
       "=================================================================\n",
-      "Total params: 84,106\n",
-      "Trainable params: 84,106\n",
+      "Total params: 83,201\n",
+      "Trainable params: 83,201\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
@@ -614,20 +614,20 @@
     "# Crear el modelo ANN\n",
     "model = Sequential()\n",
     "for i in range(0,3):\n",
-    "    model.add(Dense(128, activation='relu',input_shape=(32,32,1)))\n",
-    "    model.add(Dense(128, activation='relu',input_shape=(32,32,1)))\n",
+    "    model.add(Dense(128, activation='relu'))#,input_shape=(32,32,1)))\n",
+    "    model.add(Dense(128, activation='relu'))#,input_shape=(32,32,1)))\n",
     "    model.add(Dropout(0.2))\n",
     "#model.add(Flatten())\n",
-    "model.add(Dense(10, activation=\"softmax\"))\n",
+    "model.add(Dense(1, activation=\"softmax\"))\n",
     "\n",
-    "#input_shape = (50000, 32, 32, 1)\n",
-    "#model.build(input_shape) \n",
+    "input_shape = (50000, 32, 32, 3)\n",
+    "model.build(input_shape) \n",
     "model.summary()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 53,
    "metadata": {
     "id": "Rpys0OUWMv4y"
    },
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 54,
    "metadata": {
     "id": "-bn3xNx3tMtG"
    },
@@ -651,20 +651,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/100\n"
+      "Epoch 1/100\n",
+      "WARNING:tensorflow:Model was constructed with shape (50000, 32, 32, 3) for input KerasTensor(type_spec=TensorSpec(shape=(50000, 32, 32, 3), dtype=tf.float32, name='dense_112_input'), name='dense_112_input', description=\"created by layer 'dense_112_input'\"), but it was called on an input with incompatible shape (None, 32, 32).\n"
      ]
     },
     {
      "ename": "ValueError",
-     "evalue": "in user code:\n\n    File \"/home/angel/notebook/jupyterenv/lib/python3.8/site-packages/keras/engine/training.py\", line 1021, in train_function  *\n        return step_function(self, iterator)\n    File \"/home/angel/notebook/jupyterenv/lib/python3.8/site-packages/keras/engine/training.py\", line 1010, in step_function  **\n        outputs = model.distribute_strategy.run(run_step, args=(data,))\n    File \"/home/angel/notebook/jupyterenv/lib/python3.8/site-packages/keras/engine/training.py\", line 1000, in run_step  **\n        outputs = model.train_step(data)\n    File \"/home/angel/notebook/jupyterenv/lib/python3.8/site-packages/keras/engine/training.py\", line 859, in train_step\n        y_pred = self(x, training=True)\n    File \"/home/angel/notebook/jupyterenv/lib/python3.8/site-packages/keras/utils/traceback_utils.py\", line 67, in error_handler\n        raise e.with_traceback(filtered_tb) from None\n    File \"/home/angel/notebook/jupyterenv/lib/python3.8/site-packages/keras/engine/input_spec.py\", line 264, in assert_input_compatibility\n        raise ValueError(f'Input {input_index} of layer \"{layer_name}\" is '\n\n    ValueError: Input 0 of layer \"sequential_8\" is incompatible with the layer: expected shape=(None, 50000, 32, 32, 1), found shape=(None, 32, 32, 1)\n",
+     "evalue": "in user code:\n\n    File \"/home/angel/notebook/jupyterenv/lib/python3.8/site-packages/keras/engine/training.py\", line 1021, in train_function  *\n        return step_function(self, iterator)\n    File \"/home/angel/notebook/jupyterenv/lib/python3.8/site-packages/keras/engine/training.py\", line 1010, in step_function  **\n        outputs = model.distribute_strategy.run(run_step, args=(data,))\n    File \"/home/angel/notebook/jupyterenv/lib/python3.8/site-packages/keras/engine/training.py\", line 1000, in run_step  **\n        outputs = model.train_step(data)\n    File \"/home/angel/notebook/jupyterenv/lib/python3.8/site-packages/keras/engine/training.py\", line 859, in train_step\n        y_pred = self(x, training=True)\n    File \"/home/angel/notebook/jupyterenv/lib/python3.8/site-packages/keras/utils/traceback_utils.py\", line 67, in error_handler\n        raise e.with_traceback(filtered_tb) from None\n    File \"/home/angel/notebook/jupyterenv/lib/python3.8/site-packages/keras/engine/input_spec.py\", line 248, in assert_input_compatibility\n        raise ValueError(\n\n    ValueError: Exception encountered when calling layer \"sequential_16\" (type Sequential).\n    \n    Input 0 of layer \"dense_112\" is incompatible with the layer: expected axis -1 of input shape to have value 3, but received input with shape (None, 32, 32)\n    \n    Call arguments received:\n      • inputs=tf.Tensor(shape=(None, 32, 32), dtype=float32)\n      • training=True\n      • mask=None\n",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [38]\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m n_batch_size \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m128\u001b[39m\n\u001b[1;32m      5\u001b[0m ini \u001b[38;5;241m=\u001b[39m time()\n\u001b[0;32m----> 6\u001b[0m mfit \u001b[38;5;241m=\u001b[39m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX_train_gflat\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_train_cat\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      7\u001b[0m \u001b[43m                \u001b[49m\u001b[43mepochs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mn_epochs\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      8\u001b[0m \u001b[43m                \u001b[49m\u001b[43mbatch_size\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mn_batch_size\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      9\u001b[0m \u001b[43m                \u001b[49m\u001b[43mvalidation_data\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mX_test_gflat\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_test_cat\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     10\u001b[0m                 \u001b[38;5;66;03m#,verbose=0)\u001b[39;00m\n\u001b[1;32m     11\u001b[0m fin \u001b[38;5;241m=\u001b[39m time()\n",
+      "Input \u001b[0;32mIn [54]\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m n_batch_size \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m128\u001b[39m\n\u001b[1;32m      5\u001b[0m ini \u001b[38;5;241m=\u001b[39m time()\n\u001b[0;32m----> 6\u001b[0m mfit \u001b[38;5;241m=\u001b[39m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX_train_grey\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_train_cat\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      7\u001b[0m \u001b[43m                \u001b[49m\u001b[43mepochs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mn_epochs\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      8\u001b[0m \u001b[43m                \u001b[49m\u001b[43mbatch_size\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mn_batch_size\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      9\u001b[0m \u001b[43m                \u001b[49m\u001b[43mvalidation_data\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mX_test_grey\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_test_cat\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     10\u001b[0m                 \u001b[38;5;66;03m#,verbose=0)\u001b[39;00m\n\u001b[1;32m     11\u001b[0m fin \u001b[38;5;241m=\u001b[39m time()\n",
       "File \u001b[0;32m~/notebook/jupyterenv/lib/python3.8/site-packages/keras/utils/traceback_utils.py:67\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     65\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:  \u001b[38;5;66;03m# pylint: disable=broad-except\u001b[39;00m\n\u001b[1;32m     66\u001b[0m   filtered_tb \u001b[38;5;241m=\u001b[39m _process_traceback_frames(e\u001b[38;5;241m.\u001b[39m__traceback__)\n\u001b[0;32m---> 67\u001b[0m   \u001b[38;5;28;01mraise\u001b[39;00m e\u001b[38;5;241m.\u001b[39mwith_traceback(filtered_tb) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28mNone\u001b[39m\n\u001b[1;32m     68\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[1;32m     69\u001b[0m   \u001b[38;5;28;01mdel\u001b[39;00m filtered_tb\n",
       "File \u001b[0;32m~/notebook/jupyterenv/lib/python3.8/site-packages/tensorflow/python/framework/func_graph.py:1147\u001b[0m, in \u001b[0;36mfunc_graph_from_py_func.<locals>.autograph_handler\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m   1145\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:  \u001b[38;5;66;03m# pylint:disable=broad-except\u001b[39;00m\n\u001b[1;32m   1146\u001b[0m   \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(e, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mag_error_metadata\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n\u001b[0;32m-> 1147\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m e\u001b[38;5;241m.\u001b[39mag_error_metadata\u001b[38;5;241m.\u001b[39mto_exception(e)\n\u001b[1;32m   1148\u001b[0m   \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m   1149\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m\n",
-      "\u001b[0;31mValueError\u001b[0m: in user code:\n\n    File \"/home/angel/notebook/jupyterenv/lib/python3.8/site-packages/keras/engine/training.py\", line 1021, in train_function  *\n        return step_function(self, iterator)\n    File \"/home/angel/notebook/jupyterenv/lib/python3.8/site-packages/keras/engine/training.py\", line 1010, in step_function  **\n        outputs = model.distribute_strategy.run(run_step, args=(data,))\n    File \"/home/angel/notebook/jupyterenv/lib/python3.8/site-packages/keras/engine/training.py\", line 1000, in run_step  **\n        outputs = model.train_step(data)\n    File \"/home/angel/notebook/jupyterenv/lib/python3.8/site-packages/keras/engine/training.py\", line 859, in train_step\n        y_pred = self(x, training=True)\n    File \"/home/angel/notebook/jupyterenv/lib/python3.8/site-packages/keras/utils/traceback_utils.py\", line 67, in error_handler\n        raise e.with_traceback(filtered_tb) from None\n    File \"/home/angel/notebook/jupyterenv/lib/python3.8/site-packages/keras/engine/input_spec.py\", line 264, in assert_input_compatibility\n        raise ValueError(f'Input {input_index} of layer \"{layer_name}\" is '\n\n    ValueError: Input 0 of layer \"sequential_8\" is incompatible with the layer: expected shape=(None, 50000, 32, 32, 1), found shape=(None, 32, 32, 1)\n"
+      "\u001b[0;31mValueError\u001b[0m: in user code:\n\n    File \"/home/angel/notebook/jupyterenv/lib/python3.8/site-packages/keras/engine/training.py\", line 1021, in train_function  *\n        return step_function(self, iterator)\n    File \"/home/angel/notebook/jupyterenv/lib/python3.8/site-packages/keras/engine/training.py\", line 1010, in step_function  **\n        outputs = model.distribute_strategy.run(run_step, args=(data,))\n    File \"/home/angel/notebook/jupyterenv/lib/python3.8/site-packages/keras/engine/training.py\", line 1000, in run_step  **\n        outputs = model.train_step(data)\n    File \"/home/angel/notebook/jupyterenv/lib/python3.8/site-packages/keras/engine/training.py\", line 859, in train_step\n        y_pred = self(x, training=True)\n    File \"/home/angel/notebook/jupyterenv/lib/python3.8/site-packages/keras/utils/traceback_utils.py\", line 67, in error_handler\n        raise e.with_traceback(filtered_tb) from None\n    File \"/home/angel/notebook/jupyterenv/lib/python3.8/site-packages/keras/engine/input_spec.py\", line 248, in assert_input_compatibility\n        raise ValueError(\n\n    ValueError: Exception encountered when calling layer \"sequential_16\" (type Sequential).\n    \n    Input 0 of layer \"dense_112\" is incompatible with the layer: expected axis -1 of input shape to have value 3, but received input with shape (None, 32, 32)\n    \n    Call arguments received:\n      • inputs=tf.Tensor(shape=(None, 32, 32), dtype=float32)\n      • training=True\n      • mask=None\n"
      ]
     }
    ],
